--- a/css/grid.css
+++ b/css/grid.css
@@ -1,3 +1,4 @@
+/* Mobile first queries */
 table {
     margin: unset;
 }
@@ -313,4 +314,136 @@ div.close:hover:before {
 .crit-key,
 .crit-val {
     font-weight: 800;
+}
+
+/* Larger than mobile */
+@media only screen and (min-width: 400px) {
+    .columns-50 {
+        --column-count: 6 !important;
+    }
+    .columns-100 {
+        --column-count: 3 !important;
+    }
+}
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+    .columns-50 {
+        --column-count: 9 !important;
+    }
+    .columns-100 {
+        --column-count: 5 !important;
+    }
+    .columns-250 {
+        --image-size: 250px;
+        --column-count: 2 !important;
+    }
+    figure.figure-250 { 
+        /* width: 250px;  */
+        margin: 0 auto 20px auto;
+    }
+}
+
+/* Larger than tablet */
+@media (min-width: 800px) {
+    .columns-50 {
+        --column-count: 13 !important;
+    }
+
+    .columns-100 {
+        --column-count: 7 !important;
+    }
+
+    .columns-250 {
+        --column-count: 3 !important;
+    }
+}
+
+/* Larger than desktop */
+@media (min-width: 1100px) {
+    .columns-50 {
+        --column-count: 18 !important;
+    }
+
+    .columns-100 {
+        --column-count: 10 !important;
+    }
+    
+    .columns-250 {
+        --column-count: 4 !important;
+    }
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 1400px) {
+    .columns-50 {
+        --column-count: 23 !important;
+    }
+
+    .columns-100 {
+        --column-count: 12 !important;
+    }
+
+    .columns-250 {
+        --column-count: 5 !important;
+    }
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 1920px) {
+    .columns-50 {
+        --column-count: 32 !important;
+    }
+
+    .columns-100 {
+        --column-count: 17 !important;
+    }
+
+    .columns-250 {
+        --column-count: 7 !important;
+    }
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 2300px) {
+    .columns-50 {
+        --column-count: 38 !important;
+    }
+
+    .columns-100 {
+        --column-count: 21 !important;
+    }
+
+    .columns-250 {
+        --column-count: 8 !important;
+    }
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 2500px) {
+    .columns-50 {
+        --column-count: 41 !important;
+    }
+
+    .columns-100 {
+        --column-count: 22 !important;
+    }
+
+    .columns-250 {
+        --column-count: 9 !important;
+    }
+}
+
+@media (min-width: 3000px) {
+    .columns-50 {
+        --column-count: 50 !important;
+    }
+
+    .columns-100 {
+        --column-count: 27 !important;
+    }
+
+    .columns-250 {
+        --column-count: 11 !important;
+    }
 }
