--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,5 @@
+/* Mobile first queries */
+
 header {
     text-align: center;
     /* border-bottom: 1px solid silver; */
@@ -10,7 +12,7 @@ header a {
     text-decoration: none;
     color: black !important;
     font-weight: 200;
-    font-size: 18px !important;
+    /* font-size: 18px !important; */
 }
 
 header div.subtitle {
@@ -53,3 +55,41 @@ header small {
     font-size: 10px;
     font-family: sans-serif;
 }
+
+/* Larger than mobile */
+@media only screen and (min-width: 400px) {}
+
+/* Larger than phablet */
+@media (min-width: 550px) {    
+    header h1 a {
+        font-size: 27px !important;
+    }
+    
+    #brand {
+        left: calc(50% + 50px);
+    }
+
+    header div.subtitle {
+        display: block;
+    }
+}
+
+/* Larger than tablet */
+@media (min-width: 800px) {}
+
+/* Larger than desktop */
+@media (min-width: 1100px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 1400px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 1920px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 2300px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 2500px) {}
+
+@media (min-width: 3000px) {}
