--- a/css/sparkline.css
+++ b/css/sparkline.css
@@ -1,21 +1,21 @@
-.chart {
+#sparkBox .chart {
     display: inline-block;
     margin-right: 0;
     transition: all 0.3s ease;
 }
   
-.sparkBox {
+#sparkBox.sparkBox {
     padding: 0 10px;
     cursor: pointer;
     font-family: sans-serif;
     font-size: 10px;
     display: inline-block;
 }
-.sparkBox:hover .chart, .sparkBox:focus .chart {
+#sparkBox .sparkBox:hover .chart, .sparkBox:focus .chart {
     transform: scale(4) translate(10px, -20px);
 }
   
-.bar {
+#sparkBox .bar {
     position: relative;
     fill: #000;
     /* height: 21px; */
@@ -25,17 +25,17 @@
     display: inline-block;
 }
   
-.chart:hover .bar,
-.chart:focus .bar {
+#sparkBox .chart:hover .bar,
+#sparkBox .chart:focus .bar {
     fill: #aaa;
 }
 
-.bar:hover,
-.bar:focus {
+#sparkBox .bar:hover,
+#sparkBox .bar:focus {
     fill: #ff4136 !important;
 }
-.bar:hover text,
-.bar:focus text {
+#sparkBox .bar:hover text,
+#sparkBox .bar:focus text {
     fill: #ff4136;
 }
 #sparkBox span {
