working lightbox and carousel

--- a/css/throbber.css
+++ b/css/throbber.css
@@ -3,6 +3,7 @@
     bottom: 0;
     height: 8px;
     margin-bottom: 2rem;
+    border-top: 1px solid silver;
     border-bottom: 1px solid silver;
     padding: 0;
     transition: opacity 0.3s ease;
