--- a/css/grid.css
+++ b/css/grid.css
@@ -174,6 +174,14 @@ summary {
     margin: -0.5em -0.5em 0;
     padding: 0.5em;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1);
+
+    /******************************/
+    /* limit length of summary    */
+    /* https://btxx.org/posts/te/ */
+    /******************************/
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 details[open] {
@@ -184,6 +192,64 @@ details[open] summary {
     border-bottom: 1px solid #aaa;
     margin-bottom: 0.5em;
 }
+
+/* modifiers for simple-lightbox css */
+.slbCaption {
+    font-family: sans-serif;
+    font-size: 0.7em !important;
+    white-space: normal !important;
+    background-color: #f5f5f5;
+    color: #444 !important;
+    padding: 10px !important;
+    overflow: auto !important;
+    text-align: left !important;
+    height: 150px;
+}
+
+.slbCaption img {
+    vertical-align: middle;
+    border: 1px solid grey;
+}
+
+.slbContentOuter {
+    background-color: #f5f5f5;
+}
+
+.slbCloseBtn {
+    color: black !important;
+    right: 15px !important;
+    border-radius: 20%;
+}
+
+.slbCloseBtn:hover, .slbArrow:hover {
+    background-color: darkgrey !important;
+}
+
+.slbArrow {  
+    background-color: #f5f5f5 !important;
+    height: 5em !important;
+}
+
+.slbArrow.next {
+    right: 10px !important;
+    border-radius: 0 50% 50% 0 !important;
+}
+
+.slbArrow.next:before {
+    border-left-color: #000 !important;
+}
+
+.slbArrow.prev {
+    left: 10px !important;
+    border-radius: 50% 0 0 50% !important;
+}
+  
+.slbArrow.prev:before {
+    border-right-color: #000 !important;
+}
+
+  
+/* end: modifiers for simple-lightbox css */
 
 /* treatments figures */
 p.treatmentTitle {
