fixed uncheckable checkbox in adv search

--- a/css/adv-search.css
+++ b/css/adv-search.css
@@ -46,6 +46,9 @@ div.advanced-search input[name="as-status"] {
     outline: none;
     cursor: pointer;
 }
+div.advanced-search input[name="as-status"]:checked {
+    background-color: green;
+}
 div.advanced-search td.footer {
     text-align: right;
 }
