--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -3,29 +3,30 @@
     /*     text-align: center; */
     padding: 10px;
 }
-#charts {
+#dashboardCharts {
     padding: 5px;
     position: relative;
     border: 0px solid blue;
     text-align: center;
     height: 250px;
 }
-#charts div.chart {
+#dashboardCharts div.chart {
     vertical-align: top;
     border: 0px solid red;  
     padding: 0px;
     display: inline-block;
 }
 
-#charts div.viz {
+#dashboardCharts div.viz {
+    text-align: left;
     border: 0px solid grey;
 }
 
-#dashboard div.caption {
+#dashboardCharts div.caption {
     font-family: sans-serif;
     font-size: 12px;
 }
-#dashboard div.caption span {
+#dashboardCharts div.caption span {
     color: red;
 }
 
@@ -41,10 +42,10 @@
 
 /* Larger than desktop */
 @media (min-width: 1100px) {
-    #charts div.chart {
+    #dashboardCharts div.chart {
         display: inline-block;
     }
-    #charts div.caption {
+    #dashboardCharts div.caption {
         max-width: 255px;
     }
 }
