--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,7 @@ header a {
     text-decoration: none;
     color: black !important;
     font-weight: 200;
-    /* font-size: 18px !important; */
+    font-size: 18px !important;
 }
 
 header div.subtitle {
