--- a/css/sparkline.css
+++ b/css/sparkline.css
@@ -10,6 +10,7 @@
     font-family: sans-serif;
     font-size: 10px;
     display: inline-block;
+    /* text-align: left; */
 }
 #sparkBox .sparkBox:hover .chart, .sparkBox:focus .chart {
     transform: scale(4) translate(10px, -20px);
