--- a/css/adv-search.css
+++ b/css/adv-search.css
@@ -31,6 +31,7 @@ div.advanced-search input[type=date] {
 }
 div.advanced-search td.h {
     width: 120px;
+    text-align: right;
 }
 div.advanced-search input[type='date'] {
     width: 130px !important;
