--- a/css/charts.css
+++ b/css/charts.css
@@ -3,51 +3,37 @@
     text-align: center;
     position: relative;
 }
-
 #graphdiv {
     margin: 0 auto !important;
     font-family: sans-serif;
     width: 100%;
 }
-
 div.leg {
     text-align: left;
 }
-
 div.leg hr {
     margin: 0;
 }
-
-div.caption,
-details.charts summary {
+div.caption {
     color: grey;
     font-size: 10pt;
-    font-family: sans-serif;
+    font-family: sans-serif; 
 }
-
 #charts-container summary {
     visibility: hidden;
 }
 #charts {
     display: none;
 }
-details.charts {
-    max-width: 960px;
-    box-sizing: border-box;
-    margin: 0 auto 20px auto;
-    background: white;
-}
 details.charts summary {
-    border: 1px solid lightgrey;
-    border-radius: 5px 5px 0 0;
     outline: none;
     padding: 0.5rem;
     display: block;
-    background: #f5f5f5;
-    color: smoke;
     padding-left: 2rem;
     position: relative;
-    cursor: pointer;
+    color: grey;
+    font-size: 10pt;
+    font-family: sans-serif;
 }
 #yearlyCounts,
 #termFreq {
@@ -61,56 +47,3 @@ details.charts summary span {
 details.charts summary::-webkit-details-marker {
     display: none;
 }
-#charts {
-    border: 1px solid lightgrey;
-    border-top: none;
-    padding-bottom: 20px;
-    background-color: white;
-}
-details.charts[open] > summary:before {
-    transform: rotate(90deg);
-}
-details.charts summary:before {
-    content: "";
-    border-width: 0.4rem;
-    border-style: solid;
-    border-color: transparent transparent transparent #ccc;
-    position: absolute;
-    top: 0.7rem;
-    left: 1rem;
-    transform: rotate(0);
-    transform-origin: 0.2rem 50%;
-    transition: 0.25s transform ease;
-}
-
-/* Larger than mobile */
-@media only screen and (min-width: 400px) {}
-
-/* Larger than phablet */
-@media (min-width: 550px) {}
-
-/* Larger than tablet */
-@media (min-width: 800px) {
-    #charts-container,
-    #charts {
-        display: block;
-        visibility: hidden;
-    }
-}
-
-/* Larger than desktop */
-@media (min-width: 1100px) {}
-
-/* Larger than Desktop HD */
-@media (min-width: 1400px) {}
-
-/* Larger than Desktop HD */
-@media (min-width: 1920px) {}
-
-/* Larger than Desktop HD */
-@media (min-width: 2300px) {}
-
-/* Larger than Desktop HD */
-@media (min-width: 2500px) {}
-
-@media (min-width: 3000px) {}
