--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -80,6 +80,7 @@
         border-radius: 5px 5px 0 0;
         background: #f5f5f5;
         cursor: pointer;
+        padding-left: 2rem;
     }
     details.charts[open] > summary:before {
         transform: rotate(90deg);
