--- a/css/throbber.css
+++ b/css/throbber.css
@@ -2,7 +2,7 @@
     padding: 0;
     bottom: 0;
     height: 8px;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
     border-top: 1px solid silver;
     border-bottom: 1px solid silver;
     padding: 0;
