--- a/css/carousel.css
+++ b/css/carousel.css
@@ -6,6 +6,14 @@
   margin-bottom: 10px;
   border: 1px solid #444;
   overflow: hidden;
+  /* avoid figures splitting across columns */
+    /* see https://stackoverflow.com/a/17415553/183692 */
+    overflow: hidden; /* fix for Firefox */
+    break-inside: avoid-column;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
+    -webkit-column-break-inside: avoid; 
 }
 .content {
   margin: 0;
@@ -40,20 +48,26 @@
 }
 .active button {
   visibility: visible;
+  background-color: #eee;
+}
+.active button:hover {
+  background-color: #eee;
 }
 .offscreen {
   position: absolute;
   left: -2000px;
 }
-
 .active .buttons {
-  padding: 5px 0;
-  background: #eee;
+  padding: 0px 0;
   text-align: center;
   z-index: 10;
   position: relative;
   border-bottom: 1px solid lightgrey;
+  background-color: #eee;
 }
+/* .active {
+  background: #eee;
+} */
 .active .slide {
   position: absolute;
   top: 30px;
@@ -66,7 +80,7 @@
   transition: 1s;
 }
 .active .slide.current {
-  top: 30px;
+  top: 33px;
   left: 0px;
 /*   opacity: 1; */
 /*   transform: scale(1); */
