--- a/css/toggles.css
+++ b/css/toggles.css
@@ -1,30 +1,37 @@
 #toggle1 {
-    --slot-off-color: lightgreen;
-    --slot-on-color: #56c080;
-    --slot-width: 58px;
-}
-
-#toggle2 {
-    --slot-off-color: lightblue;
-    --slot-on-color: darkblue;
-    --slot-width: 48px;
-}
-
-#toggle3 {
     --slot-off-color: pink;
     --slot-on-color: red;
     --slot-width: 68px;
+    --slot-height: calc( 0.55 * var(--slot-width) );
+}
+
+#toggle2 {
+    --slot-off-color: lightgreen;
+    --slot-on-color: #56c080;
+    --slot-width: 58px;
+    --slot-height: calc( 0.55 * var(--slot-width) );
+}
+
+#toggle3 {
+    --slot-off-color: lightblue;
+    --slot-on-color: darkblue;
+    --slot-width: 48px;
+    --slot-height: calc( 0.55 * var(--slot-width) );
 }
 
 #toggle4 {
+    --slot-off-color: lightgreen;
+    --slot-on-color: #56c080;
+    --slot-width: 36px;
+    --slot-height: calc( 0.55 * var(--slot-width) );
+}
+
+#toggle5 {
     --slot-off-color: lightgrey;
     --slot-on-color: #444;
     --slot-width: 28px;
+    --slot-height: calc( 0.55 * var(--slot-width) );
 }
-
-/* .toggle-container {
-    margin: 5rem auto;
-} */
 
 .toggle {
   cursor: pointer;
@@ -40,8 +47,8 @@
 .toggle-switch {
     background-color: var(--slot-off-color);
     width: var(--slot-width);
-    height: calc( 0.55 * var(--slot-width) );
-    border-radius: calc( 0.5 * 0.55 * var(--slot-width) );
+    height: var(--slot-height);
+    border-radius: calc( 0.5 * var(--slot-height) );
 }
 .toggle-switch:before, .toggle-switch:after {
   content: "";
@@ -57,8 +64,8 @@
   transition: left 0.25s;
 }
 .toggle-switch:before {
-    width: calc( 0.55 * var(--slot-width) - 8px );
-    height: calc( 0.55 * var(--slot-width) - 8px );
+    width: calc( var(--slot-height) - 8px );
+    height: calc( var(--slot-height) - 8px );
 }
 
 .toggle:hover .toggle-switch:before {
@@ -105,4 +112,15 @@
 }
 .toggle-checkbox:checked ~ .toggle-label-on {
     visibility: hidden;
+}
+
+#toggle-resource {
+    float: left;
+    margin: 7px;
+}
+
+#toggle-search {
+    float: right;
+    right: 50px;
+    top: 5px;
 }
