--- a/css/header.css
+++ b/css/header.css
@@ -3,9 +3,9 @@ header {
     position: relative;
     display: block;
 }
-header .title {
+/* header .title {
     display: none;
-}
+} */
 header .title h1 {
     margin: 0 0 -10px 0;
 }
