--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -6,6 +6,11 @@
     .columns-100 {
         --column-count: 3 !important;
     }
+
+    #mapSearch {
+        width: 500px;
+        height: 375px;
+    }
 }
 
 /* Larger than phablet */
@@ -49,6 +54,15 @@
     .pager div {
         padding: 5px 7px;
     }
+    
+    div.advanced-search {
+        max-width: 760px;
+    }
+
+    /* #mapSearch {
+        width: 500px;
+        height: 375px;
+    } */
 }
 
 /* Larger than tablet */
@@ -109,6 +123,15 @@
         transform-origin: 0.2rem 50%;
         transition: 0.25s transform ease;
     }
+
+    div.advanced-search {
+        max-width: 860px;
+    }
+
+    /* #mapSearch {
+        width: 500px;
+        height: 375px;
+    } */
 }
 
 /* Larger than desktop */
@@ -134,6 +157,15 @@
     }
     form {
         max-width: 960px;
+    }
+    
+    div.advanced-search {
+        max-width: 930px;
+    }
+
+    #mapSearch {
+        width: 680px;
+        height: 375px;
     }
 }
 
