--- a/css/adv-search.css
+++ b/css/adv-search.css
@@ -3,22 +3,9 @@ div.advanced-search {
     margin: auto;
     border: 1px solid lightgrey;
     border-radius: 10px;
-/*     font-size: 10px; */
     padding: 20px;
-/*     display: inline-block; */
 }
-/* div.as_cell {
-    float: left;
-} */
-/* div.advanced-search tr {
-    border: none;
-    outline: none;
-}
-div.advanced-search td {
-    border: 1px solid red;
-    font-size: 10px;
-    padding: 5px;
-} */
+
 div.advanced-search input[type=text]:focus {
     border-bottom: blue 2px solid !important;
 }
@@ -29,12 +16,7 @@ div.advanced-search input[type=date] {
     border-bottom: 1px solid grey;
     width: 100%;
 }
-/* div.advanced-search td.h {
-    width: 120px;
-    text-align: right;
-    vertical-align: top;
-    font-weight: bold;
-} */
+
 div.advanced-search input[type='date'] {
     width: 130px !important;
 }
@@ -52,32 +34,6 @@ div.advanced-search input[name="as-status"] {
 div.advanced-search input[name="as-status"]:checked {
     background-color: green;
 }
-/* div.advanced-search td.footer {
-    text-align: left;
-} */
-
-/* responsive form */
-/* .flex-outer {
-    padding: 0;
-}
-
-.flex-outer li {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-.flex-outer > li > label {
-    flex: 1 0 120px;
-    max-width: 220px;
-    font-weight: bold;
-    /* text-align: right;
-    padding-right: 20px;
-}
-
-.flex-outer > li > label + .fullwidth {
-    flex: 1 0 220px;
-} */
 
 input[name="as-refreshCache"] {
     margin-right: 10px;
@@ -102,6 +58,8 @@ input[name="as-refreshCache"] {
     min-height: 230px;
 }
 
+/* wildcard * in CSS for classes */
+/* https://stackoverflow.com/a/5110337 */
 select[name*="as-"],
 input[name*="as-"] {
     margin: 0.5rem 0.5rem 0.5rem 0;
@@ -110,13 +68,3 @@ input[name*="as-"] {
 select[name="as-biome"] {
     width: 100%;
 }
-/* .flex-outer li button {
-    margin-left: auto;
-    padding: 8px 16px;
-    border: none;
-    background: #333;
-    color: #f2f2f2;
-    text-transform: uppercase;
-    letter-spacing: 0.09em;
-    border-radius: 2px;
-} */
