--- a/css/carousel.css
+++ b/css/carousel.css
@@ -4,16 +4,18 @@
   width: var(--image-size);
   position: relative;
   margin-bottom: 10px;
-  border: 1px solid #444;
+  border: 1px solid #ccc;
+  box-shadow: 1px 1px 10px 1px #dbd9d5;
   overflow: hidden;
   /* avoid figures splitting across columns */
-    /* see https://stackoverflow.com/a/17415553/183692 */
-    overflow: hidden; /* fix for Firefox */
-    break-inside: avoid-column;
-    -webkit-column-break-inside: avoid;
-    page-break-inside: avoid;
-    break-inside: avoid;
-    -webkit-column-break-inside: avoid; 
+  /* see https://stackoverflow.com/a/17415553/183692 */
+  overflow: hidden; /* fix for Firefox */
+  break-inside: avoid-column;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
+  -webkit-column-break-inside: avoid; 
+  
 }
 .content {
   margin: 0;
