--- a/css/grid.css
+++ b/css/grid.css
@@ -87,7 +87,7 @@ figure {
     position: relative;
     height: auto;
     border: 0px solid #444;
-    padding: 0;
+    padding: 10px;
     opacity: 1;
 }
 figure img.lazyloaded {
@@ -141,7 +141,7 @@ figure.tb {
     font-size: 12px;
 }
 figcaption {
-/*     font-size: 10px; */
+    font-size: 10px;
 /*     font-family: sans-serif; */
 /*     padding: 5px 5px 0 5px; */
     text-align: left;
@@ -157,15 +157,15 @@ figcaption div.open {
     height: 100%;
 }
 #grid-images details {
-    border: 1px solid lightgray;
+    /* border: 1px solid lightgray; */
     border-radius: 4px;
     padding: 0.5em 0.5em 0;
 }
 #grid-images details summary {
-    font-weight: bold;
+    /* font-weight: bold; */
     margin: -0.5em -0.5em 0;
     padding: 0.5em;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1);
+    /* box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1); */
 
     /******************************/
     /* limit length of summary    */
