--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -27,9 +27,9 @@
     header .title {
         display: block;
     }
-    #throbber {
+    /* #throbber {
         margin-bottom: 2rem;
-    }
+    } */
     header h1 a {
         font-size: 27px !important;
     }
