--- a/css/map.css
+++ b/css/map.css
@@ -92,6 +92,7 @@ hr.style-eight:after {
 } */
 
 /* override easy button style for custom leaflet control */
-.leaflet-touch .leaflet-bar button {
-    line-height: 36px;
+.easy-button-container button {
+    background-image: url('/img/world.webp');
+    background-size: 30px 30px;
 }
