--- a/css/carousel.css
+++ b/css/carousel.css
@@ -15,7 +15,6 @@
   page-break-inside: avoid;
   break-inside: avoid;
   -webkit-column-break-inside: avoid; 
-  
 }
 .content {
   margin: 0;
@@ -88,4 +87,7 @@
 /*   transform: scale(1); */
   transform: translate(0%);
   transition: 1s;
+}
+div.carouselbox .toggle {
+  margin-top: 6px;
 }
